kubernetes/apps/media/overseerr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`overseerr.homelab.local`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
      middlewares:
        - name: authelia
  tls:
    secretName: media-homelab-tls
